--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --env start",
     "test": "mocha config/tests.js src/**/*-spec.js --watch"
   },
   "keywords": [],
@@ -16,13 +17,24 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "clean-webpack-plugin": "^0.1.14",
+    "css-loader": "^0.26.1",
     "enzyme": "^2.7.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.1",
     "jsdom": "^9.9.1",
-    "react-addons-test-utils": "^15.4.1"
+    "react-addons-test-utils": "^15.4.1",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^2.0.0",
+    "webpack-validator": "^2.3.0"
   }
 }
