--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --env start",
-    "test": "mocha config/tests.js src/**/*-spec.js --watch"
+    "test": "jest --watch",
+    "mocha": "mocha config/tests.js src/**/*-spec.js --watch"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -28,6 +31,7 @@
     "enzyme": "^2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "jest-cli": "^18.1.0",
     "jsdom": "^9.9.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^1.3.1",
