--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "html-webpack-plugin": "^2.24.1",
     "jest-cli": "^18.1.0",
     "jsdom": "^9.9.1",
+    "node-sass": "^4.1.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^1.3.1",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
