--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.1.1",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^1.3.1",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
